# recore

./: .gitignore  Cargo.toml  book.toml  readme.md
.github/workflows/: gh-pages.yml
allocator/: Cargo.toml
allocator/src/: buddy_allocator.rs  heap.rs  lib.rs  linked_list.rs
fosix/: Cargo.toml
fs/: Cargo.toml
fs/src/: bitmap.rs  cache.rs  config.rs  dir.rs  disk.rs  file.rs  fuse.rs  inode.rs  lib.rs
fuse/: Cargo.toml
fuse/src/: cache.rs  dir.rs  disk.rs  file.rs  fuse.rs  inode.rs  main.rs  segment.rs
kernel/: Cargo.toml  Makefile  build.rs  test.txt
kernel/src/: complement.rs  config.rs  main.rs  syscall.rs
kernel/src/drivers/: blockdev.rs  exit.rs  mod.rs  plic.rs  uart.rs
kernel/src/fs/: bitmap.rs  cache.rs  dir.rs  disk.rs  fd.rs  file.rs  fileable.rs  fuse.rs  inode.rs  mod.rs  segment.rs  superblock.rs
kernel/src/heap/: buddy_allocator.rs  cache.rs  linked_list.rs  locked_heap.rs  mod.rs  page.rs  slab_allocator.rs
kernel/src/io/: kout.rs  log.rs  mod.rs  stdin.rs  stdout.rs  uart.rs
kernel/src/ipc/: pipe.rs
kernel/src/mem/: allocator.rs  mod.rs  page.rs  pt.rs  section.rs  table.rs  user.rs
kernel/src/mem/normal/: allocator.rs  mod.rs  page.rs
kernel/src/mem/slab/: allocator.rs  cache.rs  mod.rs  page.rs
kernel/src/mm/: address.rs  area.rs  frame.rs  frame_allocator.rs  heap.rs  memory.rs  mod.rs  page_table.rs  range.rs  share.rs
kernel/src/page/: empty.rs  mod.rs  pt.rs  slab.rs
kernel/src/proc/: alloc_table.rs  id.rs  lock_table.rs  lockable.rs  manager.rs  mod.rs  proc.rs  stack.rs  switch.rs
kernel/src/sync/: basic.rs  condvar.rs  lock.rs  mcs.rs  mod.rs  mutex.rs  observable.rs  semaphore.rs  up.rs  waiting_queue.rs
kernel/src/syscall/: com.rs  debug.rs  dev.rs  file.rs  mod.rs  proc.rs  process.rs  task.rs
kernel/src/task/: context.rs  fd_table.rs  loader.rs  manager.rs  mod.rs  pid.rs  processor.rs  scheduler.rs  stack.rs  switch.s  task.rs  time.rs  timer.rs
kernel/src/time/: mod.rs  trap.s
kernel/src/trap/: context.rs  mod.rs  signal.rs  test.rs  trampoline.rs  trampoline.s
packfs/: Cargo.toml
simplefs/: Cargo.toml
spin/: Cargo.toml
src/: SUMMARY.md  allocator.md  bootloader.md  page_table.md
user/: Cargo.toml  Makefile  build.rs
(+31 files in other folders)
