[package]
name = "fuse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lru = "0.10.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = { path = "../spin" }
clap = "2.33.3"
bitflags = "1.3.2"
fosix = { path = "../fosix" }