[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = "0.10.1"
xmas-elf = "0.9.0"
allocator = { path = "../allocator" }

[profile.release]
# opt-level = 0
# debug = true