[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
xmas-elf = "0.9.0"
allocator = { path = "../allocator" }
buddy_system_allocator = "0.6"
spin = { path = "../spin" }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
lru = "0.10.0"
fosix = { path = "../fosix"}
fs = { path = "../fs" }
volatile = "0.3"

[profile.release]
opt-level = 0
debug = true